src/Components/Header.css
.header {
    background-color: #ddebd8;
    width: 100%;
    height: 65px;
}
.header img{
    margin: auto;
    width: 100%;
    height: 45px;
}
.nav {
    font-weight: bold;
    font-size: 18px;
}   
.nav-item {
    font-weight: bold;
    font-size: larger;
    vertical-align: bottom;
    text-decoration: none;
}
.nav-item-active {
    font-weight: bold;
    font-size: larger;
    vertical-align: bottom;
    color: #0CA789;
    text-decoration: none;
}
.user-icon {
    font-size: 38px;
    font-weight: bolder;
    margin-right: 50px;
}
.user-icon:hover {
    font-size: 38px;
    font-weight: bolder;
    margin-right: 50px;
    cursor: pointer;
}
.nav-item-active,
.nav-item {
    color: #0CA789 !important;
}
.logo {
    width: 45px;
    height: 45px;
}

